syntax = "proto3";

package communicate_uav_uav;

message UavUavCommunicatePrevMessage {
    bytes encrypted_data = 1;
    string c = 2;
    bytes ssk = 3;
}

message UavUavCommunicateMessage {
    bytes encrypted_data = 1;
}

message UavUavCommunicateRequest {
    oneof request {
        UavUavCommunicateMessage uav_uav_communicate_message = 1;
        UavUavCommunicatePrevMessage uav_uav_communicate_prev_message = 2;
    }
}

message UavUavCommunicateResponse {
    oneof response {
        UavUavCommunicateMessage uav_uav_communicate_message = 1;
    }
}